<resources>
    <string name="app_name">Radio Menemen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_radio">Radio Settings</string>
    <string-array name="pref_channels" translatable="false">
        <item>Hercules</item>
        <item>Prometheus</item>
        <item>Zeus</item>
    </string-array>
    <string-array name="pref_channel_values" translatable="false">
        <item>Hercules</item>
        <item>Prometheus</item>
        <item>Zeus</item>
    </string-array>
    <string-array name="anims" translatable="false">
        <item>@string/ip_accdec</item>
        <item>@string/ip_acc</item>
        <item>@string/ip_anticipate</item>
        <item>@string/ip_anticipate_overshoot</item>
        <item>@string/ip_bounce</item>
        <item>@string/ip_dec</item>
        <item>@string/ip_foutlin</item>
        <item>@string/ip_foutsin</item>
        <item>@string/ip_lin</item>
        <item>@string/ip_loutsin</item>
        <item>@string/ip_overshoot</item>
    </string-array>
    <string-array name="anim_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="ip_accdec">Accelerate Decelerate</string>
    <string name="ip_acc">Accelerate</string>
    <string name="ip_anticipate">Anticipate</string>
    <string name="ip_anticipate_overshoot">Anticipate Overshoot</string>
    <string name="ip_bounce">Bounce</string>
    <string name="ip_dec">Decelerate</string>
    <string name="ip_foutlin">Fast out Linear in</string>
    <string name="ip_foutsin">Fast out Slow in</string>
    <string name="ip_lin">Linear</string>
    <string name="ip_loutsin">Linear out Slow in</string>
    <string name="ip_overshoot" translatable="false">Overshoot</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">Notify me when there is a new message on chat</string>
    <string name="pref_title_on_air_notifications">Notify me when broadcast begins</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="nav_radio">Recently Played</string>
    <string name="nav_sohbet">Chat</string>
    <string name="share">Share</string>
    <string name="nav_login">Login</string>
    <string name="podcast" translatable="false">Podcast</string>
    <string name="other">Other</string>
    <string name="news">News</string>
    <string name="licence">Licence</string>
    <string name="pref_title_select_channel">Select Channel</string>
    <string name="error_occured">An Error Occurred</string>
    <string name="toast_error_password_incorrect">Incorrect password</string>
    <string name="toast_logged_in">Logged in</string>
    <string name="toast_signed_up">Signed up</string>
    <string name="time_mins">" minutes"</string>
    <string name="time_hrs">" hours"</string>
    <string name="time_days">" days"</string>
    <string name="time_moment">A moment ago</string>
    <string name="time_moments">Moments ago</string>
    <string name="time_ago">ago</string>
    <string name="podcast_subtitle">Here you can download latest podcast from Radio Menemen\'s broadcasts.</string>
    <string name="news_descr">What happened in radio menemen? Answers are here…</string>
    <string name="media_pause">Pause</string>
    <string name="media_resume">Resume</string>
    <string name="media_stop">Stop</string>
    <string name="download_file">Would you like to download the file?</string>
    <string name="cd_artwork">Album artwork</string>
    <string name="downloading_file">Downloading file</string>
    <string name="music_not_found">Music not found</string>
    <string name="toast_logged_out">Logged out</string>
    <string name="descr_login_logout">If you have an account sign in, if you don\'t sign up</string>
    <string name="notification_onair_title">Radyo Menemen is Live</string>
    <string name="notification_onair_content">" is on air"</string>
    <string name="licence_title">Licences of graphics that used in this app</string>
    <string name="version">Version</string>
    <string name="caps_uploading_in_progress">Caps upload in progress</string>
    <string name="caps_uploaded">Caps uploaded</string>
    <string name="caps_uploaded_sub">Caps uploaded successfully</string>
    <string name="caps_uploading">Uploading caps</string>
    <string name="sign_out">Sign Out</string>
    <string name="toast_internet_warn">There is a problem with the internet connection</string>
    <string name="old_podcast_descr">Old incitorrent podcasts are listed below</string>
    <string name="old_podcast_toast">"Click %d times to see old podcasts"</string>
    <string name="askperm">Apparently your phone has android 6.0 or higher version. Due to changes of permission protocol we must ask you a couple of permission in order to select an image from gallery.</string>
    <string name="permissions">Permissions</string>
    <string name="toast_permission_read_storage_denied">Image cannot be picked due to permission denial.</string>
    <string name="toast_permission_read_storage_granted">Permission granted now you can pick an image.</string>
    <string name="lastplayed_emptyview">Recently played list is empty</string>
    <string name="message_deleted">Message deleted</string>
    <string name="toast_only_your_message_deleted">You can delete only your own messages</string>
    <string name="snackbar_undo">Undo</string>
    <string name="toast_check_your_connection">Check your internet connection</string>
    <string name="cd_smiley">Smiley</string>
    <string name="cd_send_button">Send Button</string>
    <string name="ET_hint_write_something">Write something</string>
    <string name="me">Me</string>
    <string name="cd_song_artwork">Song Artwork</string>
    <string name="ph_np_track">Now Playing</string>
    <string name="settings_artwork_summary">Download album art of playing track. (May increase mobile-data consumption) When the connection state detected as slow image will not be downloaded</string>
    <string name="settings_artwork_title">Download Artwork</string>
    <string name="settings_onstart_chat_title">Open Chat on startup</string>
    <string name="settings_onstart_chat_summary">Set on if you want to land on chat screen on app start</string>
    <string name="image_not_uploaded">Not Uploaded</string>
    <string name="settings_music_only_title">Music Only Mode</string>
    <string name="settings_music_only_summary">If you do not want to log in and you are using the app only for listening music. This setting does not effect if you already logged in.</string>
    <string name="music_only_mode_is_active">Music Only mode is active</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="dialog_nologin_title">You don\'t want to login?</string>
    <string name="dialog_nologin_descr">App will restart at "Music Only" mode. You can change this in settings</string>
    <string name="dialog_logout_title">Do you want to logout?</string>
    <string name="dialog_logout_descr">Chat and Shout features will be disabled</string>
    <string name="button_login_signup"><![CDATA[Login & Signup]]></string>
    <string name="button_no_login">I don\'t want to login</string>
    <string name="fresh">New</string>
    <string name="search_on_spotify">Find on Spotify</string>
    <string name="search_on_youtube">Search on Youtube</string>
    <string name="search_lyrics">Search Lyrics</string>
    <string name="lyrics">Lyrics</string>
    <string name="settings_show_full_error_title">Show full error message</string>
    <string name="settings_show_full_error_summary">Expand the error message that says \'An error occurred\'</string>
    <string name="settings_list_populate_anim">Select list animation</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="intro_slide_chat_descr">Only Music* is not enough, you should come join our chat</string>
    <string name="intro_slide_chat_title">Join Chat</string>
    <string name="intro_slide_music_descr">You will be experiencing seamless music wherever and whenever you are</string>
    <string name="intro_slide_music_title">Seamless Music Experience</string>
    <string name="intro_slide_news_descr">Get notified with what happened in Radio Menemen</string>
    <string name="intro_slide_podcast_descr">You can download or listen immediately Radio Menemen podcasts if you like</string>
    <string name="notifications">Notifications</string>
    <string name="track_deleted">Track deleted from the list</string>
    <string name="notification_new_msg">There are new messages</string>
    <string name="notification_new_messages_text">New messages in chat.</string>
    <string name="save">Save</string>
    <string name="pref_title_podcast_notifications">Notify me when new podcast uploaded</string>
    <string name="notification_title_new_podcast">New Podcast</string>
    <string name="pref_title2_new_message_notifications">Chat Notifications</string>
    <string name="pref_title2_on_air_notifications">On Air Notifications</string>
    <string name="pref_title2_podcast_notifications">Podcast Notifications</string>
    <string name="mute_chat_notifications">Mute Chat Notifications</string>
    <string name="pref_title_show_intro">Show Intro</string>
    <string name="pref_summary_show_intro">Show intro that appears in first lauch</string>
    <string name="mute_chat_notificaitions_for_10_min">Chat notifications will be muted next 10 minutes</string>
    <string name="site_adress" translatable="false">radyomenemen.com</string>
    <string name="title_activity_show_image_comments">Comments</string>
    <string name="toast_image_saved">Image saved to sdcard</string>
    <string name="menemencast" translatable="false">MenemenCast</string>
    <string name="nav_galeri">Gallery</string>
    <string name="pref_summary_sync_channels">If radio does not play, click here for manuel channel info update</string>
    <string name="pref_title_sync_channels">Manuel Channel Sync</string>
    <string name="pref_summary_download_all">Download all the messages that sent in last month</string>
    <string name="pref_title_download_all">Download All Messages</string>
    <string name="who_is_online">Who is online?</string>
    <string name="settings_autp_c_summary">Adjust stream quality depending on network status of the phone.  (Mobile Netork or Wi-Fi). Ps. If radio is playing already channel will not changed.</string>
    <string name="settings_autp_c_title">Select Channel Automatically</string>
    <string name="nav_topics">Topics</string>
    <string name="settings_show_listeners_summary">Show listeners count at now playing notification. (It will not work unless auto dj is on air, since this information update occurs only in auto djs song change event)</string>
    <string name="settings_show_listeners_title">Show Listeners</string>
    <string name="mp">Menemen Point</string>
    <string name="mp_descr">You can see your actions list below. Consecutive transactions are summed.</string>
    <string name="action_close_topic">Close Topic</string>
    <string name="action_leave_topic">Leave Topic</string>
    <string name="settings_resume_podcast_title">Resume Podcasts</string>
    <string name="settings_resume_podcast_summary">Always resume podcasts where it was</string>
</resources>