<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="download_artwork"
        android:summary="@string/settings_artwork_summary"
        android:title="@string/settings_artwork_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="resume_podcast"
        android:summary="@string/settings_resume_podcast_summary"
        android:title="@string/settings_resume_podcast_title"/>
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="show_listeners"
        android:title="@string/settings_show_listeners_title"
        android:summary="@string/settings_show_listeners_summary"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="adaptive_quality"
        android:summary="@string/settings_autp_c_summary"
        android:disableDependentsState="true"
        android:title="@string/settings_autp_c_title" />
    <ListPreference
        android:defaultValue="180"
        android:dependency="adaptive_quality"
        android:entries="@array/pref_channels"
        android:entryValues="@array/pref_channel_values"
        android:key="radio_channel"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_select_channel" />

    <Preference
        android:title="@string/pref_title_sync_channels"
        android:key="syncchannels"
        android:summary="@string/pref_summary_sync_channels"/>

</PreferenceScreen>
