<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@mipmap/ic_login"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_radio"
            android:icon="@drawable/ic_last_played_black_24dp"
            android:title="@string/nav_radio" />

        <item
            android:id="@+id/nav_chat"
            app:actionViewClass="android.widget.TextView"
            android:icon="@mipmap/ic_chat"
            android:title="@string/nav_sohbet" />

        <item
            android:id="@+id/nav_topic"
            android:icon="@drawable/ic_topic_discussion"
            android:title="@string/nav_topics"
            android:enabled="true"/>

        <item
            android:id="@+id/nav_galeri"
            android:icon="@drawable/ic_galeri"
            android:title="@string/nav_galeri" />

        <item
            android:id="@+id/nav_shout"
            android:icon="@mipmap/ic_shout"
            android:title="@string/nav_haykir" />
        <item
            android:id="@+id/nav_podcast"
            android:icon="@drawable/podcast"
            android:title="@string/podcast" />
        <item
            android:id="@+id/nav_olanbiten"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/announce"
            android:title="@string/news" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_logout"
                android:title="@string/sign_out"
                android:visible="false"/>
        </menu>
    </item>

</menu>
