<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="onstart_chat"
        android:dependency="music_only"
        android:summary="@string/settings_onstart_chat_summary"
        android:title="@string/settings_onstart_chat_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="open_gallery"
        android:title="Galeri Resimlerini Açma Şekli"
        android:summaryOn="Galerideki resimlere tıklayınca direkt yorumlar görüntülenir"
        android:summaryOff="Galerideki resimlere tıklayınca direkt olarak resim görüntülenir"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="music_only"
        android:title="@string/settings_music_only_title"
        android:summary="@string/settings_music_only_summary"
        android:disableDependentsState="true"
        />

    <SwitchPreference
        android:defaultValue="false"
        android:key="show_full_error"
        android:summary="@string/settings_show_full_error_summary"
        android:title="@string/settings_show_full_error_title" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/anims"
        android:entryValues="@array/anim_values"
        android:key="enter_anim"
        android:negativeButtonText="@android:string/cancel"
        android:positiveButtonText="@null"
        android:title="@string/settings_list_populate_anim" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_artworks"-->
        <!--android:entryValues="@array/pref_artworks_values"-->
        <!--android:key="example_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="Şarkı Resimlerini Göster" />-->
    <SwitchPreference
        android:defaultValue="false"
        android:key="chat_sound"
        android:summary="WmY23Bd7yMOfcyiqeW9LqSoktjHSpvN8gg6Uf7BnWx5BXnf7GtNHw5j1odytkjEgIRvafV5pAJ8Kg4tX5zjk9fiO6gEYqv0BJOdw"
        android:title="DDSCgr5sV3NhIEZ1iWAv" />
    <Preference
        android:title="@string/pref_title_show_intro"
        android:key="show_intro"
        android:summary="@string/pref_summary_show_intro"/>
    <Preference
        android:title="@string/pref_title_download_all"
        android:key="download_all"
        android:summary="@string/pref_summary_download_all"/>
    <Preference
        android:title="@string/licence"
        android:key="licence"
        android:summary="@string/licence_title"/>
    <Preference android:title="@string/version"
        android:key="versiyon"
        android:summary="1.0.0"/>
</PreferenceScreen>
