<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/go_to_online_users"
        android:orderInCategory="100"
        android:title="@string/who_is_online"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_leave_topic"
        android:orderInCategory="100"
        android:title="@string/action_leave_topic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_close_topic"
        android:orderInCategory="100"
        android:title="@string/action_close_topic"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/action_silent_notification"
        android:orderInCategory="100"
        android:title="@string/mute_chat_notifications"
        android:icon="@drawable/ic_notifications_off_black_24dp"
        app:showAsAction="ifRoom"
        />
</menu>