<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications"
        android:title="@string/notifications" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications"
        android:key="notifications_chat"
        android:title="@string/pref_title_new_message_notifications"   />
        <!--android:summary="@string/pref_summary_new_message_notifications"-->


    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications"
        android:key="notifications_on_air"
        android:title="@string/pref_title_on_air_notifications" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications"
        android:key="notifications_podcast"
        android:title="@string/pref_title_podcast_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications"
        android:key="notifications_on_air_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications"
        android:key="notifications_on_air_vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
