<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.incitorrent.radyo.menemen.pro.fragments.track_info"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top"
        android:background="@color/colorBackgroundsoft"
        android:id="@+id/rel_track_info">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/art"
            android:contentDescription="@string/cd_song_artwork"
            android:src="@mipmap/album_placeholder"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
           />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/music_not_found"
            android:id="@+id/track"
            android:layout_below="@+id/art"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="16dp"
            android:maxLines="2"
            android:textSize="26sp"
            android:textColor="@color/textColorPrimary" />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/track"
            android:layout_alignLeft="@+id/track"
            android:layout_alignStart="@+id/track"
            android:id="@+id/spotify_card"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/cardviewBG">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="16dp"
                android:src="@drawable/spotify"
                android:contentDescription="@string/search_on_spotify"
                android:id="@+id/iv_spotify" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/search_on_spotify"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="left|center"
                    android:paddingStart="16dp"
                    android:id="@+id/tv_spotify"
                    android:textColor="@color/textColorPrimary" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/youtube_card"
            android:layout_below="@+id/spotify_card"
            android:layout_alignLeft="@+id/spotify_card"
            android:layout_alignStart="@+id/spotify_card"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/cardviewBG">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="16dp"
            android:src="@drawable/youtube"
            android:id="@+id/iv_youtube"
            android:contentDescription="@string/search_on_youtube"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/search_on_youtube"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="left|center"
            android:paddingStart="16dp"
            android:id="@+id/tv_youtube"
            android:textColor="@color/textColorPrimary" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lyric_card"
            android:layout_below="@+id/youtube_card"
            android:layout_alignLeft="@+id/youtube_card"
            android:layout_alignStart="@+id/youtube_card"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/cardviewBG">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="16dp"
                android:src="@drawable/lyrics"
                android:id="@+id/iv_lyric"
                android:contentDescription="@string/search_lyrics"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/search_lyrics"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="left|center"
                    android:paddingStart="16dp"
                    android:id="@+id/tv_lyric"
                    android:textColor="@color/textColorPrimary" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>
</FrameLayout>
