<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackgroundsoft"
    tools:context="com.incitorrent.radyo.menemen.pro.fragments.mp_transactions_list">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cardview_in_appbar_margin"
                android:layout_marginRight="@dimen/cardview_in_appbar_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:cardBackgroundColor="@color/cardviewBG"
                app:layout_collapseMode="parallax">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:contentDescription="@string/app_name"
                        android:id="@+id/imageView"
                        android:src="@mipmap/ic_launcher"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_margin="16dp"
                        android:adjustViewBounds="false"
                        android:layout_height="100dp"
                        android:layout_width="90dp" />

                    <TextView
                        android:id="@+id/mp_descr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mp_descr"
                        android:textSize="12sp"
                        android:layout_marginRight="16dp"
                        android:layout_alignBottom="@+id/imageView"
                        android:layout_toEndOf="@+id/imageView"
                        android:textColor="@color/textColorPrimary"
                        android:layout_below="@+id/textView3"
                        android:layout_marginTop="4dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/mp"
                        android:id="@+id/textView3"
                        android:textColor="@color/textColorPrimary"
                        android:textStyle="bold"
                        android:layout_alignTop="@+id/imageView"
                        android:layout_toRightOf="@+id/imageView"
                        android:layout_toEndOf="@+id/imageView" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="gone"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:fillViewport="true"
        app:behavior_overlapTop="32dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mplistR"
            />
    </android.support.v4.widget.NestedScrollView>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressbar"
        android:indeterminate="true"
        android:layout_gravity="center"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="center|bottom"
        android:layout_margin="16dp"
        />
</android.support.design.widget.CoordinatorLayout>